# barnacle-manuscript

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
analyses/: start-jupyter-container.sh
analyses/1-simulation/: 1-simulation-example.ipynb  2-cv-workflow-validation.ipynb  simulation-data.py
analyses/2-mapping/: 0-map-transcriptomes.sh  1-pro-syn-abundances.ipynb  1-sample-set-overview.ipynb  2-pro-syn-abundances.ipynb  collate_salmon_files.py  map-transcriptomes.sh
analyses/3-normalization/: 0-normalization-sctransform.ipynb  normalization-sctransform-batch-correction.ipynb  normalization-sctransform.ipynb
analyses/4-fitting/: 0-run-grid-search.sh  1-cv-data-analysis.ipynb  3-alt-ranks.toml  4-alt-lambdas copy.toml  5-high-rank.toml  grid-search.py  run-grid-search.sh
analyses/5-models/: 0-compile-bootstraps.ipynb  1-component-robustness.ipynb  2-component-robustness-sparsity.ipynb  compile-bootstraps.ipynb
analyses/6-clusters/: 1-cluster-comparison.ipynb
analyses/7-interpretation/: 0-enrichment-analysis.ipynb  1-zinser-comparison.ipynb  2-fe-n-clusters.ipynb  enrichment-analysis.ipynb  zinser-comparison.ipynb
containers/: Dockerfile  build-containers.sh  build_docker_images.sh  build_singularity_images.sh  requirements.txt
containers/preprocess/: Dockerfile
data/: assemble-data-inputs.ipynb  compile-input-data.ipynb
data/2-mapping/: salmon_metadata.csv
data/fastq/: SRA-Sample-Metadata.csv  fetch-sra-fastq.sh  process-raw-reads.sh
data/refseqs/: compile-refseqs.sh
figures/1-simulation/: cv-workflow-validation.ipynb  decomposition-diagram.afdesign  simulation-case-studies.ipynb  simulation-data-analysis.ipynb  simulation-example.ipynb
figures/2-mapping/: pro-syn-abundances.ipynb  sampling-geography.afdesign
figures/3-normalization/: normalization-figures.ipynb
figures/4-fitting/: cv-data-analysis.ipynb
figures/5-models/: component-analysis.ipynb  component-profiles.ipynb  component-robustness-sparsity.ipynb  component-robustness.ipynb
figures/6-clusters/: cluster-comparison.afdesign  cluster-comparison.ipynb  cluster-correlation.ipynb  cluster-summary.ipynb  component-profiles.ipynb
figures/7-interpretation/: diel-clusters-interpretation.ipynb  fe-n-clusters.ipynb  zinser-comparison.ipynb
figures/8-interpretation/: diel-clusters-interpretation.ipynb  fe-n-clusters.ipynb  (+1 more)
manuscript/: advances_supplementary_materials.docx
(+9 files in other folders)
