[tool.poetry]
name = "barnacle-manuscript"
version = "0.1.0"
description = "repository to organize the scripts, analyses, figures, and latex files for the publication linked to barnacle"
authors = ["Stephen Blaskowski <stephen.blaskowski@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "barnacle-manuscript"}]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
numpy = "^1.23"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
seaborn = "^0.12.2"
rpy2 = "^3.5.8"
notebook = "^6.5.2"
xarray = "^2023.2.0"
netcdf4 = "^1.6.2"
scikit-learn = "^1.2.1"
numba = "^0.56.4"
umap-learn = "^0.5.3"
tensorly = "^0.8.0"
tensorly-lab = {git = "https://github.com/tensorly/lab.git"}
h5py = "^3.8.0"
barnacle = {git = "https://github.com/blasks/barnacle.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
