[tool.poetry]
name = "barnacle-manuscript"
version = "0.1.0"
description = "repository to organize the scripts, analyses, figures, and latex files for the publication linked to barnacle"
authors = ["Stephen Blaskowski <stephen.blaskowski@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "barnacle-manuscript"}]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
numpy = "^1.26.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
xarray = "^2023.9.0"
notebook = "^7.0.5"
rpy2 = "^3.5.14"
netcdf4 = "^1.6.4"
h5py = "^3.10.0"
tensorly = "^0.8.1"
tensorly-lab = {git = "https://github.com/tensorly/lab.git"}
barnacle = {git = "https://github.com/blasks/barnacle.git"}
pycmap = "^0.2.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
